# fonts-installer

./: .gitignore  README.md  pyproject.toml
src/font_installer/: __init__.py  __main__.py  cli.py
src/font_installer/config/: __init__.py  fonts.py  settings.py
src/font_installer/core/: __init__.py  downloader.py  exceptions.py  extractor.py  installer.py
src/font_installer/ui/: __init__.py  app.py  styles.py
src/font_installer/ui/screens/: __init__.py
src/font_installer/utils/: __init__.py  system.py
tests/: __init__.py  conftest.py  test_installer.py  test_integration_flow.py
